--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-blinker==1.9.0
-click==8.2.1
-Flask==3.1.1
-itsdangerous==2.2.0
-Jinja2==3.1.6
-MarkupSafe==3.0.2
-Werkzeug==3.1.3
+flask==2.3.3
+Werkzeug==2.3.7
+sentence-transformers==2.2.2
+numpy==1.24.3
+PyPDF2==3.0.1
+python-docx==0.8.11
+gunicorn==21.2.0
+torch==2.0.1
+python-dotenv==1.0.0
