--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,18 @@
+# Core build tools (must come first so pip doesn’t choke)
+setuptools>=65
+wheel
+
+# Web server
+gunicorn
+
+# Flask stack
 flask==2.3.3
 Werkzeug==2.3.7
+
+# ML + PDF + DOCX utilities
 sentence-transformers==2.2.2
 numpy==1.24.3
 PyPDF2==3.0.1
 python-docx==0.8.11
-gunicorn==21.2.0
 torch==2.0.1
 python-dotenv==1.0.0
