--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-# Core build tools (must come first so pip doesn’t choke)
-setuptools>=65
-wheel
+# Core build tools
+pip==24.2
+setuptools>=68.0.0
+wheel>=0.41.0
+
 
 # Web server
 gunicorn
