--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,8 @@ flask==2.3.3
 Werkzeug==2.3.7
 
 # ML + PDF + DOCX utilities
-sentence-transformers==2.2.2
-numpy==1.24.3
-python-docx==0.8.11
-torch==2.0.1
+sentence-transformers==2.7.0
+numpy>=1.26.0
+python-docx==1.1.0
+torch>=2.1.0
 python-dotenv==1.0.0
